[gd_scene load_steps=22 format=3 uid="uid://c1htfmdda8xn6"]

[ext_resource type="Script" uid="uid://dy2u6s33l0rwk" path="res://Scripts/CharacterController.gd" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://co0f10xhgbr74" path="res://Prefabs/ball.tscn" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://1dhrv1se8v52" path="res://Scripts/Spawner.gd" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://bf8bwehx5b3x1" path="res://Prefabs/storage_tray.tscn" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://b1lrjhsl16w55" path="res://Prefabs/FoodBall.tscn" id="5_kry3j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_top_color = Color(0.258006, 0.571359, 0.976834, 1)
sky_horizon_color = Color(0.699212, 0.777777, 0.885474, 1)
ground_bottom_color = Color(0.173205, 0.174112, 0.199426, 1)
ground_horizon_color = Color(0.699212, 0.777777, 0.885474, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")
tonemap_mode = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_jjvhh"]
size = Vector3(100, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kry3j"]
albedo_color = Color(0.166368, 0.208514, 0.200889, 1)

[sub_resource type="BoxMesh" id="BoxMesh_21xkr"]
material = SubResource("StandardMaterial3D_kry3j")
size = Vector3(100, 0.1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_kry3j"]
size = Vector3(10, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jjvhh"]
albedo_color = Color(5.00319e-05, 0.205008, 0.361255, 1)

[sub_resource type="BoxMesh" id="BoxMesh_6bp64"]
material = SubResource("StandardMaterial3D_jjvhh")
size = Vector3(10, 1, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h2yge"]
radius = 0.4
height = 1.6

[sub_resource type="LabelSettings" id="LabelSettings_jjgbg"]
font_size = 38

[sub_resource type="GDScript" id="GDScript_bo1nx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1bvp3"]
size = Vector3(0.769531, 1.7251, 0.0465088)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_05ayl"]
albedo_color = Color(0.215367, 0.554251, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8gfvv"]
material = SubResource("StandardMaterial3D_05ayl")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1ccww"]
size = Vector3(0.1, 0.1, 0.1)

[node name="Main" type="Node3D"]

[node name="Environment" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_color = Color(1, 0.835294, 0.196078, 1)
shadow_enabled = true

[node name="Structure" type="Node" parent="."]

[node name="Ground" type="StaticBody3D" parent="Structure"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_jjvhh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, -0.0002985)
mesh = SubResource("BoxMesh_21xkr")

[node name="Counter" type="StaticBody3D" parent="Structure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.50072)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Structure/Counter"]
shape = SubResource("BoxShape3D_kry3j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Structure/Counter"]
mesh = SubResource("BoxMesh_6bp64")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_jjgbg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00569534, 0.8, 0.0197073)
shape = SubResource("CapsuleShape3D_h2yge")

[node name="MainCamera" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19478, 0)

[node name="InteractionPrompt" type="Label" parent="CharacterBody3D/MainCamera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.0
offset_top = -75.0
offset_right = 377.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_jjgbg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionRaycast" type="RayCast3D" parent="CharacterBody3D/MainCamera"]
target_position = Vector3(0, 0, -2.5)
script = SubResource("GDScript_bo1nx")

[node name="HoldPoint" type="Node3D" parent="CharacterBody3D/MainCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.412599, -0.0742059, -0.91507)

[node name="PushArea" type="Area3D" parent="CharacterBody3D"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D/PushArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.741855, -0.411901)
shape = SubResource("BoxShape3D_1bvp3")

[node name="Ball" parent="." instance=ExtResource("2_bo1nx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12116, 0.606646, -1.80748)

[node name="SpawnLocation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.98355, -5.06712)

[node name="StorageTray" parent="." instance=ExtResource("4_jjvhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.45885, 0.516646, -2.03404)

[node name="SpawnerButton" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14259, 0.556646, -2.12011)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnerButton"]
mesh = SubResource("BoxMesh_8gfvv")

[node name="StaticBody3D" type="StaticBody3D" parent="SpawnerButton" node_paths=PackedStringArray("spawn_location")]
script = ExtResource("3_8gbba")
spawn_location = NodePath("../../SpawnLocation")
item_scene = ExtResource("2_bo1nx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnerButton/StaticBody3D"]
shape = SubResource("BoxShape3D_1ccww")

[node name="FoodBall" parent="." instance=ExtResource("5_kry3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.409769, 0.55, -2.00886)

[node name="FoodBall2" parent="." instance=ExtResource("5_kry3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.156758, 0.582813, -2.02158)
